--- a/index.html
+++ b/index.html
@@ -8,9 +8,60 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/hide_menu.js" defer></script>
+    <script src="./js/form_hendling.js" defer></script>
+    <script src="./js/header_scroll.js" defer></script>
 </head>
 <body class="body">
     <div class="wrapper">
+        <nav class="menu-mobile menu-mobile__hide">
+            <div class="container">
+                <div class="menu-mobile__header">
+                    <div class="header__logo">
+                        <img src="./img/icons/logo.svg" alt="logo" class="logo">
+                    </div>
+                    <button id="hide" class="header__menu-button">
+                        <img src="./img/icons/close.svg" alt="menu" class="header__menu-img">
+                    </button>
+                </div>
+                <div class="menu-mobile__content">
+                    <ul class="menu-mobile__list">
+                        <li class="menu-moblie__item menu__item">
+                            <a href="#equipment" class="menu-mobile__link menu__link">Оборудование</a>
+                            <div class="menu-mobile__line"></div>
+                            <nav class="sub-menu-mobile">
+                                <ul class="sub-menu-mobile__list">
+                                    <li class="sub-menu-mobile__item sub-menu__item">
+                                        <a href="./сonveyors.html" class="sub-menu-mobile__link sub-menu__link">Конвейры</a>
+                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                    </li>
+                                    <li class="sub-menu-mobile__item sub-menu__item">
+                                        <a href="./elevators.html" class="sub-menu-mobile__link sub-menu__link">Эливаторы</a>
+                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                    </li>
+                                    <li class="sub-menu-mobile__item sub-menu__item">
+                                        <a href="./lift_equipment.html" class="sub-menu-mobile__link sub-menu__link">Лифтовое оборудование</a>
+                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                    </li>
+                                    <li class="sub-menu-mobile__item sub-menu__item">
+                                        <a href="./shut-off_valves.html" class="sub-menu-mobile__link sub-menu__link">Запорная арматура</a>
+                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
+                                    </li>
+                                </ul>
+                            </nav>
+                        </li>
+                        <li class="menu-moblie__item menu__item">
+                            <a href="#services" class="menu-mobile__link menu__link">Услуги</a>
+                        </li>
+                        <li class="menu-moblie__item menu__item">
+                            <a href="./vacancies.html" class="menu-mobile__link menu__link">Вакансии</a>
+                        </li>
+                        <li class="menu-moblie__item menu__item menu__item-active">
+                            <a href="#form" class="menu-mobile__link menu__link menu__link-active">Связаться</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <header class="header">
             <div class="container">
                 <div class="header__content">
@@ -61,55 +112,6 @@
                         <button id="open" class="header__menu-button">
                             <img src="./img/icons/menu.svg" alt="menu" class="header__menu-img">
                         </button>
-                        <nav class="menu-mobile menu-mobile__hide">
-                            <div class="container">
-                                <div class="menu-mobile__header">
-                                    <div class="header__logo">
-                                        <img src="./img/icons/logo.svg" alt="logo" class="logo">
-                                    </div>
-                                    <button id="hide" class="header__menu-button">
-                                        <img src="./img/icons/close.svg" alt="menu" class="header__menu-img">
-                                    </button>
-                                </div>
-                                <div class="menu-mobile__content">
-                                    <ul class="menu-mobile__list">
-                                        <li class="menu-moblie__item menu__item">
-                                            <a href="#equipment" class="menu-mobile__link menu__link">Оборудование</a>
-                                            <div class="menu-mobile__line"></div>
-                                            <nav class="sub-menu-mobile">
-                                                <ul class="sub-menu-mobile__list">
-                                                    <li class="sub-menu-mobile__item sub-menu__item">
-                                                        <a href="./сonveyors.html" class="sub-menu-mobile__link sub-menu__link">Конвейры</a>
-                                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
-                                                    </li>
-                                                    <li class="sub-menu-mobile__item sub-menu__item">
-                                                        <a href="./elevators.html" class="sub-menu-mobile__link sub-menu__link">Эливаторы</a>
-                                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
-                                                    </li>
-                                                    <li class="sub-menu-mobile__item sub-menu__item">
-                                                        <a href="./lift_equipment.html" class="sub-menu-mobile__link sub-menu__link">Лифтовое оборудование</a>
-                                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
-                                                    </li>
-                                                    <li class="sub-menu-mobile__item sub-menu__item">
-                                                        <a href="./shut-off_valves.html" class="sub-menu-mobile__link sub-menu__link">Запорная арматура</a>
-                                                        <img src="./img/icons/arrow.svg" alt="arrow" class="sub-menu-mobile__img">
-                                                    </li>
-                                                </ul>
-                                            </nav>
-                                        </li>
-                                        <li class="menu-moblie__item menu__item">
-                                            <a href="#services" class="menu-mobile__link menu__link">Услуги</a>
-                                        </li>
-                                        <li class="menu-moblie__item menu__item">
-                                            <a href="./vacancies.html" class="menu-mobile__link menu__link">Вакансии</a>
-                                        </li>
-                                        <li class="menu-moblie__item menu__item menu__item-active">
-                                            <a href="#form" class="menu-mobile__link menu__link menu__link-active">Связаться</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </nav>
                     </div>
                 </div>
             </div>
@@ -555,32 +557,32 @@
                             </div>
                             <div class="form__body">
                                 <div class="form__data">
-                                    <form action="#" class="form__fields">
+                                    <form action="" id="form" class="form__fields">
                                         <div class="form__inputs">
                                             <div class="form__list">
                                                 <div class="form__item">
-                                                    <input type="text" name="name" id="name" class="form__input" placeholder="Имя">
+                                                    <input type="text" name="name" id="name" class="form__input _req _name" placeholder="Имя">
                                                 </div>
                                                 <div class="form__item">
-                                                    <input type="email" name="email" id="email" class="form__input" placeholder="Почта">
+                                                    <input type="email" name="email" id="email" class="form__input _req _email" placeholder="Почта">
                                                 </div>
                                                 <div class="form__item">
-                                                    <input type="tel" name="number" id="number" class="form__input" placeholder="Номер">
+                                                    <input type="tel" name="number" id="number" class="form__input _req _number" placeholder="Номер">
                                                 </div>
                                                 <div class="form__item">
-                                                    <input type="text" name="company" id="company" class="form__input" placeholder="Компания">
+                                                    <input type="text" name="company" id="company" class="form__input _req _company" placeholder="Компания">
                                                 </div>
                                                 <div class="form__item">
-                                                    <textarea placeholder="Коментарий" type="text" name="message" id="message" class="form__input"></textarea>
+                                                    <textarea placeholder="Коментарий" type="text" name="message" id="message" class="form__input _req _message"></textarea>
                                                 </div>
                                             </div>
                                             <div class="form__checkbox checkbox">
-                                                <input class="checkbox__input" type="checkbox" name="agree" id="agree">
+                                                <input class="checkbox__input _req" type="checkbox" name="agree" id="agree">
                                                 <label class="checkbox__label" for="agree"><a href="./privacy.html" class="polit-privacy">Я согласен с условиями политики конфиденциальности</a></label>
                                             </div>
                                         </div>
                                         <div class="form__actions">
-                                            <button class="welcome__button">
+                                            <button type="submit" class="welcome__button">
                                                 <span class="welcome__button-name">Отправить</span>
                                                 <img src="./img/icons/double_arrow.svg" alt="double_arrow" class="welcome__button-img">
                                             </button>
